k8s/minikube/p00-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-rrts-at-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-rrts-at-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ms-rrts-at-gateway
    spec:
      containers:
      - name: ms-rrts-at-gateway
        image: gordonsdev/p00-gateway-service:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: gateway-port
          containerPort: 4000
