k8s/minikube/p00-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-rrts-at-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: ms-rrts-at-gateway
  ports:
  - name: gateway
    port: 4000
    targetPort: 4000
    protocol: TCP
